issue fix related to advertisement component top & bottom spacing

--- a/clientlib-base/css/advertise.less
+++ b/clientlib-base/css/advertise.less
@@ -2,7 +2,7 @@
 @import "./partials/mixins.less";
 
 .advertise{
-   margin: 125px auto;
+   margin: 50px auto;
    width: 100%;
    &__heading{
       line-height: 34px;
@@ -19,7 +19,11 @@
       height: 90px;
       max-width: 970px;
       margin: 0 auto;
-      display: flex;
+      display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+      display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+      display: -ms-flexbox;      /* TWEENER - IE 10 */
+      display: -webkit-flex;     /* NEW - Chrome */
+      display: flex;  
       justify-content: space-around;
       align-items: center;
       font-weight: bold!important;
