--- a/clientlib-base/css/latestarticle.less
+++ b/clientlib-base/css/latestarticle.less
@@ -158,7 +158,7 @@
       position: absolute;
       right: 0;
       top: 20px;
-      padding: 0 10px;
+      padding: 0 9px;
    }
    &__sortbytitle{
       .default--font(@fontSize: 18px; @lineHeight: 30px);
