--- a/clientlib-base/css/media.less
+++ b/clientlib-base/css/media.less
@@ -183,8 +183,11 @@
    }
    .btn{
       font-size: 15px;
+      &:hover{
+         background: #000;
+         color: #fff;
+      }
    }
-   
    table{
       width: 150%;
    }
@@ -558,6 +561,10 @@
          &--sm{
             font-size: 16px;
          }
+         &--jrnlcrd{
+            font-size: 24px;
+            line-height: 30px;
+         }
       }
    }
 }
@@ -566,6 +573,14 @@
 @media (min-width: 992.02px) and (max-width: 1199.98px) {
    .para-size--artdesc{
       height: 40px!important;
+   }
+   .title{
+      &-size{
+         &--jrnlcrd{
+            font-size: 24px;
+            line-height: 30px;
+         }
+      }
    }
 }
 
